<resources>
    <string name="app_name1">Social Mall</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD5ftRk6-UwGVAWWKE5IWtm4yxppzP6_xs</string>
    <string name="guest_user">Guest User</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="chat">Chat</string>
    <string name="rate_app">Rate the App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_direct">About Social Mall</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="get_otp">Get Otp</string>
    <string name="skip">Skip</string>
    <string name="other_settings">Other Setting</string>
    <string name="how_to_use">How to Use</string>
    <string name="help">Help</string>
    <string name="next">Next</string>
    <string name="txt_mrp">MRP</string>
    <string name="txt_selling_price">Selling Price</string>
    <string name="txt_Inclusive">Inclusive of all taxes</string>
    <string name="txt_seller_details">Seller Detail</string>
    <string name="txt_shop_name">Shop Name</string>
    <string name="txt_delivery">Delivery options:</string>
    <string name="change_language">Change Language</string>
    <string name="update_profile">Update Profile</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_pincode">Please Enter PinCode</string>
    <string name="no_connection">No Internet Connection Please connect.</string>
    <string name="back_again">Please click back again to exit</string>
    <string name="enter_valid_mobno">Please enter Valid  Mobile Number.</string>
    <string name="loading">Loading ...</string>
    <string name="enter_mobno">Please Enter Mobile Number</string>
    <string name="enter_your_mobno">Enter Your Mobile Number</string>
    <string name="what_s_your_number">What\'s Your Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="we_will_send_an_otp_to_nabove_number">We will send an OTP to \nabove Number</string>
    <string name="login_using_password">Login using Password</string>
    <string name="invalid_pass">Invalid Password</string>
    <string name="enter_no_txt">Enter Verification code which we have send to XXXXX </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="valid_otp">Please enter valid OTP.</string>
    <string name="enter_otp">Please Enter OTP</string>
    <string name="home">Home</string>
    <string name="basket">Basket</string>
    <string name="select_price_range">Select Price Range</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="sort">SORT</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="whatsapp_business">Whatsapp Business</string>
    <string name="share">Share</string>
    <string name="search_seller">Search seller by name or product</string>
    <string name="near_by_item">Nearby Items</string>
    <string name="view_more">View More</string>
    <string name="no_item_found">No Item Found</string>
    <string name="no_loction_found">For your Location there is no  seller active,please in  future ं</string>
    <string name="near_by_seller">Top Seller</string>
    <string name="all_categories">All Categories</string>
    <string name="share_with">Share with</string>
    <string name="filter">FILTER</string>
    <string name="by_seller">Near By Seller</string>
    <string name="most_visted_seller">Most Visited Seller</string>
    <string name="new_seller">New Seller</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="my_order">My Order</string>
    <string name="order_tab_all">All</string>
    <string name="order_tab_pending">Pending</string>
    <string name="order_tab_accept">Accepted</string>
    <string name="order_tab_shiped">Shipped</string>
    <string name="order_tab_delivered">Delivered</string>
    <string name="order_tab_cancelled">Cancelled</string>
    <string name="search_order_by_order_id">Search Order by Order Id</string>
    <string name="no_data_found">No Data Found</string>
    <string name="add_review">Add Review</string>
    <string name="text_on">" on "</string>
    <string name="text_order_number">"Order No#: "</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="available_offers">Available Offers</string>
    <string name="no_offer_found">No offer found</string>
    <string name="nothing_in_basket">Nothing in Basket</string>
    <string name="keep_shopping">Keep Shopping</string>
    <string name="checkout">Checkout</string>
    <string name="shopping_bag">Shopping Bag</string>
    <string name="alert">Alert</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure that you want to delete this items?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="category_list">Categories List</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="save">Save</string>
    <string name="please_enter_new_password">Please Enter New Password</string>
    <string name="please_enter_confirm_password">Please Enter Confirm Password</string>
    <string name="password_not_matched">Confirm Password does not match with New Password</string>
    <string name="no_internet_connection">No Internet Connection Please connect.</string>
    <string name="congratulations">Congratulation</string>
    <string name="ok">OK</string>
    <string name="verification">Verification</string>
    <string name="buyer">Buyer</string>
    <string name="browse_products">Browse products</string>
    <string name="place_order">Place order</string>
    <string name="add_your_favourite_store">Add your favourite store</string>
    <string name="seller">Seller</string>
    <string name="display_your_product">Display your product</string>
    <string name="accept_and_manage_order">Accept and manage order</string>
    <string name="invite_customer_to_store">Invite customer to store</string>
    <string name="i_m_buyer">I\'M BUYER</string>
    <string name="i_m_seller">I\'M SELLER</string>
    <string name="password_verification">Password Verification</string>
    <string name="enter_the_password">Enter The Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="update_location">Update Location</string>
    <string name="your_location">Your location</string>
    <string name="change">Change</string>
    <string name="flat_no">flat_no</string>
    <string name="name">name</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="product_list">Product List</string>
    <string name="full_name">Full Name,Flat,Building,Apartment</string>
    <string name="street_address">Street Address</string>
    <string name="landmark_optional">Landmark (optional)</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="price_details">Price Details</string>
    <string name="order_amount">Order Amount</string>
    <string name="total_saving">Total Saving</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="total_amount">Total Amount</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_no">Order No :</string>
    <string name="order_on">Order Date</string>
    <string name="sell_by">Seller</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="price_details_order">Price Details (</string>
    <string name="items_order">items )</string>
    <string name="search_for">Search For</string>
    <string name="current_location">Current location</string>
    <string name="search_results">Search Results</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_pin_code">Enter Pin code</string>
    <string name="select_amp_proceed"><![CDATA[Select & Proceed]]></string>
    <string name="variants">Variants</string>
    <string name="similar_products">Similar Products</string>
    <string name="other_sellers">Other Sellers</string>
    <string name="seller_s_others_product">Seller\'s others product</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="existing_clear_cart">Your Cart has existing items from Another Seller.Do You Want to clear it and add items from this Seller?</string>
    <string name="user_name">User Name</string>
    <string name="check_your_order_status">Check Your Order status</string>
    <string name="my_address">My Address</string>
    <string name="save_address_for_a_hassle_free_checkout">Save address for a hassle-free checkout</string>
    <string name="change_password">Change Password</string>
    <string name="manage_your_password">Manage your password</string>
    <string name="add_new_address">Add new address</string>
    <string name="address">Address</string>
    <string name="make_default_address">Are you sure that you want to make this address Default?</string>
    <string name="want_to_delete">Are you sure you want to delete this address?</string>
    <string name="name_reg">Name</string>
    <string name="email_is_optional">Email is Optional</string>
    <string name="rate_your_experience">Rate Your Experience</string>
    <string name="how_would_you_rate_the_seller">How would you rate the seller?</string>
    <string name="comments">Comments</string>
    <string name="enter_comments">Enter Comments</string>
    <string name="review">Review</string>
    <string name="order_id">Order ID :</string>
    <string name="please_add_rating">Please Add rating</string>
    <string name="please_enter_comments">Please enter comments</string>
    <string name="search_seller_by_name_or_product">Search seller by name or product</string>
    <string name="product">Product</string>
    <string name="shop">Shop</string>
    <string name="seller_list">Seller List</string>
    <string name="delivery_options">Delivery options:</string>
    <string name="minimum_order_amount">Minimum order amount:</string>
    <string name="delivered_till_distance">Delivered till distance:</string>
    <string name="searched_item_is_not_available">Searched item is not Available</string>
    <string name="seller_items">Seller Items</string>
    <string name="update_available">Update Available</string>
    <string name="update_to_latest_version">Please update the latest version</string>
    <string name="from_play_store">from play store</string>
    <string name="update">Update</string>
    <string name="email">Email</string>
    <string name="search_your_address">Search your address</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="or">OR</string>
    <string name="please_enter_city_name">Please enter city name</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="no_filter_categories">No Category</string>
    <string name="no_filter_price">No Price</string>
    <string name="no_filter_brands">No Brands</string>
    <string name="no_filter_discount">No Discount</string>
    <string name="location">Location</string>
    <string name="remove">Remove</string>
    <string name="seller_a">Seller:</string>
    <string name="inr">INR</string>
    <string name="off_upto_inr">OFF upto INR</string>
    <string name="on_order_of">"on order of "</string>
</resources>