<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:text="@string/password_verification"
            android:id="@+id/tvPasswordVerification"
            style="@style/font_normal_sami_bold"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/enter_the_password"
            android:id="@+id/tvEnterThePassword"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="normal" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/editext_drawble"
            android:drawableLeft="@drawable/ic_key"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            style="@style/font_normal"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:maxLength="10"
            android:padding="20dp"
            android:paddingLeft="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_lodding_otp"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_background"
            android:drawableRight="@drawable/ic_left_arrow__1_"
            android:drawablePadding="10dp"
            android:padding="5dp"
            style="@style/font_normal_sami_bold"
            android:paddingEnd="10dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/teal_200"
            android:textSize="15dp"
            android:textStyle="normal" />



    </LinearLayout>

</layout>