<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_tittle"
            layout="@layout/toolbar_arrow" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_tittle"
            android:layout_marginTop="20dp"
            android:orientation="vertical">



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_new_password"
                    style="@style/font_normal"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/editext_drawble"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="10dp" />



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Confirm_password"
                style="@style/font_normal"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/editext_drawble"
                android:gravity="center_vertical"
                android:hint="@string/enter_confirm_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Otp"
                style="@style/font_normal"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/editext_drawble"
                android:gravity="center_vertical"
                android:hint="@string/enter_otp"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tv_getOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:text="@string/get_otp"
                android:textColor="@color/teal_200"
                android:textSize="20sp" />


        </LinearLayout>

        <Button
            android:id="@+id/bt_save_password"
            style="@style/font_normal_sami_bold"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@drawable/background_for_buttons"
            android:text="@string/save"
            android:layout_marginBottom="25dp"
            android:textColor="@color/seller_button_color"
            android:textStyle="normal" />

    </RelativeLayout>

</layout>