<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                style="@style/font_normal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                android:scaleType="center"
                android:src="@drawable/ic_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_yourno"
                style="@style/font_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:text="@string/enter_your_mobno"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile_number"
                style="@style/font_normal_sami_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/editext_drawble"
                android:drawableLeft="@drawable/ic_india"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:hint="@string/enter_phone_number"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:padding="20dp"
                android:paddingLeft="15dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_otp_msg"
                style="@style/font_normal_sami_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/we_will_send_an_otp_to_nabove_number"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_get_otp"
                    style="@style/font_normal"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/bg_background"
                    android:drawableRight="@drawable/ic_left_arrow__1_"
                    android:drawablePadding="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/get_otp"
                    android:textAllCaps="false"
                    android:textColor="@color/teal_200"
                    android:textSize="15dp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_skip"
                    style="@style/font_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/skip_background"
                    android:text="@string/skip"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_login_with_password"
                style="@style/font_normal_sami_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:background="@null"
                android:drawablePadding="10dp"
                android:paddingEnd="10dp"
                android:text="@string/login_using_password"
                android:textAllCaps="false"
                android:textColor="@color/teal_200"
                android:textSize="18sp"
                android:textStyle="normal"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</layout>