<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_tittle"
            layout="@layout/toolbar_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_tittle"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_full_name"
                    style="@style/font_normal"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilStreetAdd"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_street"
                    style="@style/font_normal"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/street_address"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:minLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLandMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_landmark"
                    style="@style/font_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/landmark_optional"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:minLines="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pin_code"
                    style="@style/font_normal"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/pincode"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="6" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pin_city"
                    style="@style/font_normal"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:gravity="center_vertical"
                    android:hint="@string/city"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pin_state"
                    style="@style/font_normal"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:hint="@string/state"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="15dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_save_addresh"
            style="@style/font_normal_sami_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_for_buttons"
            android:text="@string/save"
            android:textColor="@color/seller_button_color"
            android:textStyle="normal" />
    </RelativeLayout>
</layout>